[package]
name = "guppy"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "gui_remote"
path = "src/gui_remote.rs"

[[bin]]
name = "grpc"
path = "src/grpc.rs"

[features]
default = ["visualiser"]

visualiser = ["kiss3d"]

[dependencies]
lss_driver = "0.2"
reqwest = "0.10"
tokio = "0.2"
clap = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
async-trait = "0.1"
nalgebra = { version = "0.21", features = ["serde-serialize"] }
async-std = "1.6"
ctrlc = "3.1"
kiss3d = { git = "https://github.com/dmweis/kiss3d", branch = "less-sensitive-camera", optional = true }
tonic = "0.3"
prost = "0.6"

[dev-dependencies]
mockito = "^0.27"

[build-dependencies]
tonic-build = { version = "0.3", features = ["prost"] }
