[package]
name = "guppy"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"

[[bin]]
name = "gui_remote"

[[bin]]
name = "grpc"

[dependencies]
lss_driver = { git = "https://github.com/dmweis/lss_driver", branch = "tokio-1.0" }
tokio = { version = "1.0", features = ["macros", "time", "rt-multi-thread"] }
clap = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
async-trait = "0.1"
nalgebra = { version = "0.24", features = ["serde-serialize"] }
async-std = "1.6"
ctrlc = "3.1"
kiss3d = "0.29"
tonic = "0.4"
prost = "0.7"
anyhow = "^1.0"

[dev-dependencies]
approx = "0.4"

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }
