[package]
name = "guppy-controller"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lss_driver = "0.6"
tokio = { version = "1.12", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
async-trait = "0.1"
nalgebra = { version = "0.24", features = ["serde-serialize"] }
async-std = "1.6"
anyhow = "^1.0"
thiserror = "1.0"
parry3d = "0.1"

[dev-dependencies]
approx = "0.4"
