[package]
name = "guppy-grpc"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc"

[dependencies]
guppy-controller = { path = "../guppy-controller" }
tokio = { version = "1.12", features = ["macros", "time", "rt-multi-thread"] }
clap = "3.0.0-beta.1"
nalgebra = { version = "0.26" }
ctrlc = "3.1"
tonic = "0.4"
prost = "0.7"
anyhow = "^1.0"

[dev-dependencies]
approx = "0.4"

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }
