[package]
name = "guppy-grpc"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc"

[dependencies]
guppy-controller = { path = "../guppy-controller" }
tokio = { version = "1.34", features = ["macros", "time", "rt-multi-thread"] }
clap = {version = "4", features = ["derive"]}
nalgebra = {version = "0.32.3", features = ["serde-serialize"]}
ctrlc = "3.1"
tonic = "0.10.2"
prost = "0.12.2"
anyhow = "^1.0"

[dev-dependencies]
approx = "0.5.1"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
