[package]
name = "guppy-ui"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "motion_planner"

[[bin]]
name = "cli"

[[bin]]
name = "simulator"

[[bin]]
name = "gui_remote"

[dependencies]
guppy-controller = { path = "../guppy-controller" }
guppy-grpc = { path = "../guppy-grpc" }
tokio = { version = "1.12", features = ["macros", "time", "rt-multi-thread"] }
clap = "3.0.0-beta.1"
nalgebra = { version = "0.26" }
async-std = "1.6"
ctrlc = "3.1"
kiss3d = "0.31"
anyhow = "^1.0"

