[package]
name = "guppy-ui"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2018"


[dependencies]
guppy-controller = { path = "../guppy-controller" }
tokio = { version = "1.12", features = ["macros", "time", "rt-multi-thread"] }
clap = "3.0.0-beta.1"
nalgebra = { version = "0.26" }
async-std = "1.6"
ctrlc = "3.1"
kiss3d = "0.31"
anyhow = "^1.0"

