[package]
name = "guppy-ui"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2021"


[dependencies]
guppy-controller = { path = "../guppy-controller" }
guppy-grpc = { path = "../guppy-grpc" }
tokio = { version = "1.12", features = ["macros", "time", "rt-multi-thread"] }
clap = {version = "4", features = ["derive"]}
nalgebra = {version = "0.32.3", features = ["serde-serialize"]}
async-std = "1.6"
ctrlc = "3.1"
kiss3d = "0.35"
anyhow = "^1.0"

